# tusb_msc_hid_lcd_ble

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
SquareLine/: SquareLine_SimpleMenu.sll  SquareLine_SimpleMenu.spj
SquareLine/project/SquareLine_Project/main/: main.c
SquareLine/project/SquareLine_Project/main/ui/: ui.c  ui.h  ui_events.h  ui_helpers.h
SquareLine/project/SquareLine_Project/main/ui/screens/: ui_ScreenEditRGB.c
components/custom_hmi/: CMakeLists.txt  CustomHMI.cpp  Joypad2.cpp  idf_component.yml
components/custom_hmi/include/: CustomHMI.h  Joypad2.h
components/custom_hmi/ui/: CMakeLists.txt  filelist.txt  ui_helpers.c
components/custom_hmi/ui/images/: ui_img_749525677.c
components/custom_hmi/ui/screens/: ui_ScreenEdit.c  ui_ScreenMain.c  ui_ScreenOptions.c  ui_ScreenSetup.c
main/: CMakeLists.txt  idf_component.yml  main.cpp  main_ble.cpp
main/ble/: BleHidKeybaord.cpp  BleHidKeybaord.h  BleUart.cpp  BleUart.h
main/hmi/: hmi_handle.cpp
main/rgb/: rgb_led.c
main/usb/: usb_main.c
main/usb/hid/: tusb_hid.c
